# fps-simulation-validation

./: .gitignore  .vercelignore  DEPLOYMENT.md  README.md  criteria_failures.csv  math.md  pyproject.toml  requirements.txt  study.md  vercel.json
.github/workflows/: main.yml
config/: default.yaml
data/: seeds.txt
frontend/: package.json  pnpm-lock.yaml  svelte.config.js
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/sim.json/: +server.ts
frontend/src/routes/validation-status/: +server.ts
frontend/static/validation_artifacts/: comparison_report.md  fps_config.json  kuramoto_config.json  kuramoto_results.csv
frontend/static/validation_artifacts/golden/: golden_hashes.json  reference_hashes.json
scripts/: run_fps_simulation.py  run_validation.py
src/fps/: __init__.py  config.py  dynamics.py  kuramoto.py  metrics.py  parameters.py  server.py  simulate.py  spiral.py  strata.py  visualise.py
src/tests/: test_dynamics.py  test_metrics.py  test_simulate.py  test_spiral.py
validation_artifacts/: comparison_report.md  fps_results.csv
validation_artifacts/golden/: golden_hashes.json  golden_run.csv
