[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "fps-toolkit"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pydantic",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
fps-simulate = "fps.simulate:main"
